Positives are green and negatives are marked as red

--- a/Twitter-map.html
+++ b/Twitter-map.html
@@ -19,9 +19,9 @@
 <script type="text/javascript" src="js/bubble_chart.js"></script>
     <div id="svgContainer">
     </div>
-    <div class="control-group">
+    <!-- <div class="control-group">
         <button onclick="update()">Next</button>
-    </div>
+    </div> -->
 
 </body>
 </html>
