fade in and fade out out effects added

--- a/Twitter-map.html
+++ b/Twitter-map.html
@@ -22,9 +22,9 @@
 <script type="text/javascript" src="js/bubble_chart.js"></script>
     <div id="svgContainer">
     </div>
-    <!-- <div class="control-group">
-        <button onclick="update()">Next</button>
-    </div> -->
+    <div class="control-group">
+        <button onclick="bubbleChart.update()">Next</button>
+    </div>
 
 </body>
 </html>
