--- a/Twitter-map.html
+++ b/Twitter-map.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>Tweet Bubble Chart</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/d3.js"></script>
     <script type="text/javascript" src="js/d3.js"></script>
     
     <script src="js/amitabh-data.js"></script>
@@ -19,9 +19,11 @@
 </head>
 <body>
 <!-- <script type="text/javascript" src="js/d3.js"></script> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script> -->
 <script type="text/javascript" src="js/bubble_chart.js"></script>
     <div id="svgContainer">
     </div>
+    <div id="display_tweet"></div>
     <div class="control-group">
         <button onclick="bubbleChart.update()">Next</button>
     </div>
