--- a/Twitter-map.html
+++ b/Twitter-map.html
@@ -18,8 +18,8 @@
     
 </head>
 <body>
-<!-- <script type="text/javascript" src="js/d3.js"></script> -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script> -->
+<p>Visualizing Twitter Data <br> The green dots represent "probably true" tweets and the red dots represent "probably negative tweet". Hover on them to see the tweet.</p>
+
 <script type="text/javascript" src="js/bubble_chart.js"></script>
     <div id="svgContainer">
     </div>
