--- a/Twitter-map.html
+++ b/Twitter-map.html
@@ -18,14 +18,14 @@
     
 </head>
 <body>
-<p>Visualizing Twitter Data <br> The green dots represent "probably true" tweets and the red dots represent "probably negative tweet". Hover on them to see the tweet.</p>
+<p>Visualizing Twitter Data <br> The green dots represent "probably true" tweets and the red dots represent "probably negative tweet".Gray dots represent the undeterministic tweets.Hover on them to see the tweet.</p>
 
 <script type="text/javascript" src="js/bubble_chart.js"></script>
     <div id="svgContainer">
     </div>
     <div id="display_tweet"></div>
     <div class="control-group">
-        <button onclick="bubbleChart.update()">Next</button>
+        <button onclick="bubbleChart.update()">Training</button>
     </div>
 
 </body>
